unpackaged/main/default/objects/WorkOrder/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>150.67</defaultValue>
    <label>Amount (Payment)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>