unpackaged/main/default/objects/WorkOrder/fields/CPQ_Quote__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for SFS Demos</description>
    <label>CPQ Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Work Orders (CPQ Quote)</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>