unpackaged/main/default/objects/WorkOrder/fields/Current_Users_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Current_Users_Work_Order__c</fullName>
    <formula>Contact.Id =  $User.ContactId</formula>
    <label>Current User&#39;s Work Order</label>
    <type>Checkbox</type>
</CustomField>