unpackaged/main/default/objects/WorkOrder/fields/DB_Days__c.field-meta.xml
<CustomField>
    <fullName>DB_Days__c</fullName>
    <label>DB Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>