unpackaged/main/default/objects/WorkOrder/fields/Depot_Repair_Status__c.field-meta.xml
<CustomField>
    <fullName>Depot_Repair_Status__c</fullName>
    <label>Depot Repair Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Disassembly</fullName>
            </value>
            <value>
                <fullName>Awaiting Authorization</fullName>
            </value>
            <value>
                <fullName>Awaiting Parts</fullName>
            </value>
            <value>
                <fullName>Repairing</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>