unpackaged/main/default/objects/WorkOrder/fields/Entitlement_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Is_Active__c</fullName>
    <formula>IF( (Entitlement.EndDate &gt; TODAY() || ISBLANK(Entitlement.EndDate)) &amp;&amp; NOT(ISBLANK(EntitlementId)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Is Active</label>
    <type>Checkbox</type>
</CustomField>