unpackaged/main/default/objects/WorkOrder/fields/FSL__Scheduling_Priority__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_Priority__c</fullName>
    <formula>CASE(TEXT(Priority), &#39;Critical&#39; , 1 ,&#39;High&#39; ,2,&#39;Medium&#39; ,3 , &#39;Low&#39;, 4, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>