unpackaged/main/default/objects/WorkOrder/fields/FSL_Is_Linked_To_Maintenance_Plan__c.field-meta.xml
<CustomField>
    <fullName>FSL_Is_Linked_To_Maintenance_Plan__c</fullName>
    <formula>NOT(ISBLANK(MaintenancePlanId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Linked To Maintenance Plan</label>
    <type>Checkbox</type>
</CustomField>