unpackaged/main/default/objects/WorkOrder/fields/FSL_Is_Linked_To_Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>FSL_Is_Linked_To_Service_Contract__c</fullName>
    <formula>NOT( ISBLANK( ServiceContractId ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Linked To Service Contract</label>
    <type>Checkbox</type>
</CustomField>