unpackaged/main/default/objects/WorkOrder/fields/Inventory_Check__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Check__c</fullName>
    <label>Inventory Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>