unpackaged/main/default/objects/WorkOrder/fields/Send_Payment__c.field-meta.xml
<CustomField>
    <fullName>Send_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment</label>
    <type>Checkbox</type>
</CustomField>