unpackaged/main/default/objects/WorkOrder/fields/temp_work_time__c.field-meta.xml
<CustomField>
    <fullName>temp_work_time__c</fullName>
    <label>temp work time</label>
    <type>DateTime</type>
</CustomField>