unpackaged/main/default/objects/WorkOrder/fields/Work_End__c.field-meta.xml
<CustomField>
    <fullName>Work_End__c</fullName>
    <description>Time when the work on site is finished, also displayed in Service Report</description>
    <label>Work End</label>
    <type>DateTime</type>
</CustomField>