unpackaged/main/default/objects/WorkOrder/fields/Work_Start__c.field-meta.xml
<CustomField>
    <fullName>Work_Start__c</fullName>
    <description>Start time of the work on site to be displayed in the Service Report</description>
    <label>Work Start</label>
    <type>DateTime</type>
</CustomField>