unpackaged/main/default/objects/WorkOrder/listViews/Open_Depot_Repairs.listView-meta.xml
<ListView>
    <fullName>Open_Depot_Repairs</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Depot_Repair_Status__c</columns>
    <columns>Priority</columns>
    <columns>PO_Number__c</columns>
    <columns>Expected_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Order_Type__c</field>
        <operation>equals</operation>
        <value>Depot Repair</value>
    </filters>
    <filters>
        <field>Depot_Repair_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Depot Repairs</label>
</ListView>