unpackaged/main/default/objects/WorkOrder/listViews/Repairs_on_Hold_Awaiting_Authorization.listView-meta.xml
<ListView>
    <fullName>Repairs_on_Hold_Awaiting_Authorization</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Subject</columns>
    <columns>Priority</columns>
    <columns>PO_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_Order_Type__c</field>
        <operation>equals</operation>
        <value>Depot Repair</value>
    </filters>
    <filters>
        <field>Depot_Repair_Status__c</field>
        <operation>equals</operation>
        <value>Awaiting Authorization</value>
    </filters>
    <label>Repairs on Hold - Awaiting Authorization</label>
</ListView>