unpackaged/main/default/objects/WorkOrder/listViews/sfsdg__All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>sfsdg__All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Account</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>WorkType</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
</ListView>