unpackaged/main/default/objects/WorkOrder/listViews/Upcoming_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Upcoming_Work_Orders</fullName>
    <columns>Name</columns>
    <columns>Subject</columns>
    <columns>Priority</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_Users_Work_Order__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Upcoming Work Orders</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>